[package]
name = "clapshot-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clapshot-server"
path = "src/main.rs"

[lib]
name = "clapshot_server"
path = "src/lib.rs"


[dependencies]
crossbeam-channel = "0.5.6"
docopt = "1.1.1"
env_logger = "0.9.1"
log = "0.4.17"
os = "0.1.0"
signal-hook = "0.3.14"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
path-absolutize = "3.0.13"
serde_json = "1.0.85"
rust_decimal = "1.26.1"
threadpool = "1.8.1"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.10"
serde = "1.0.145"
diesel_migrations = "2.0.0"
chrono = "0.4.22"

[dev-dependencies]
assert_fs = "1.0.7"
tracing-test = {version="0.2.3", features=["no-env-filter"] }

