[package]
name = "clapshot-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clapshot-server"
path = "src/main.rs"

[lib]
name = "clapshot_server"
path = "src/lib.rs"


[dependencies]
crossbeam-channel = "0.5.6"
docopt = "1.1.1"
env_logger = "0.9.1"
log = "0.4.17"
os = "0.1.0"
signal-hook = "0.3.14"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
path-absolutize = "3.0.13"
serde_json = "1.0.85"
rust_decimal = "1.26.1"
threadpool = "1.8.1"
diesel = { version = "2.0.2", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.10"
serde = "1.0.145"
diesel_migrations = "2.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
warp = "0.3.3"
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3.24"
data-url = "0.2.0"
base64 = "0.13.0"
async-std = "1.12.0"

[dev-dependencies]
assert_fs = "1.0.7"
tracing-test = {version="0.2.3", features=["no-env-filter"] }
# reqwest = "0.11.12"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.2.2"
tokio-tungstenite = "0.17.2"
tokio-test = "0.4.2"
