[package]
name = "clapshot-organizer-simple-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "clapshot-organizer_rust-simple"
path = "src/main.rs"

[lib]
name = "simple_organizer"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.28.0", features = ["full"] }

lib-clapshot-grpc = { path = "../../protobuf/libs/rust/lib-clapshot-grpc" }

tonic = "0.9.2"
tonic-reflection = "0.9.2"
tower = "0.4.13"

tracing = "0.1.38"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

anyhow = "1.0.70"
docopt = "1.1.1"
tokio-stream = "0.1.13"
serde = "1.0.160"
ctrlc = "3.2.5"
semver = "1.0.17"
