[package]
name = "lib-clapshot-grpc"
version = "0.5.3"
edition = "2021"

description = "Clapshot gRPC prototypes in Rust"
homepage = "https://github.com/elonen/clapshot"
license = "MIT"
readme = "README.md"


[lib]
name = "lib_clapshot_grpc"
path = "src/lib.rs"


[dependencies]
tracing = "0.1.38"
serde = "1.0.160"
warp = "0.3.4"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.13"
anyhow = "1.0.70"
tonic = "0.9.2"
prost = "0.11.9"
tonic-reflection = "0.9.2"
tower = "0.4.13"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
libc = "0.2.142"

[build-dependencies]
tonic-build = "0.9.2"
pbjson-build = "0.5.1"
