[package]
name = "lib-clapshot-grpc"
version = "0.7.0"
edition = "2021"

description = "Clapshot gRPC prototypes in Rust"
homepage = "https://github.com/elonen/clapshot"
license = "MIT"
readme = "README.md"


[lib]
name = "lib_clapshot_grpc"
path = "src/lib.rs"


[dependencies]
tracing = "0.1.38"
serde = "1.0.160"
warp = "0.3.4"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.13"
anyhow = "1.0.70"
tonic = "0.11.0"
prost = "0.12.4"
tonic-reflection = "0.11.0"
tower = "0.4.13"
pbjson = "0.6.0"
pbjson-types = "0.6.0"
libc = "0.2.142"
strip-ansi-escapes = "0.2.0"
wait-timeout = "0.2.0"
nix = "0.20.0"
mio = "0.8.11"

[build-dependencies]
tonic-build = "0.11.0"
pbjson-build = "0.6.2"
