[package]
name = "lib-clapshot-grpc"
version = "0.5.3"
edition = "2021"

description = "Clapshot gRPC prototypes in Rust"
homepage = "https://github.com/elonen/clapshot"
license = "MIT"
readme = "README.md"


[lib]
name = "lib_clapshot_grpc"
path = "src/lib.rs"


[dependencies]
tracing = "0.1.37"
serde = "1.0.155"
warp = "0.3.3"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
anyhow = "1.0.69"
tonic = "0.8.3"
prost = "0.11.8"
tonic-reflection = "0.6.0"
tower = "0.4.13"
pbjson = "0.5.1"
pbjson-types = "0.5.1"
libc = "0.2.140"

[build-dependencies]
tonic-build = "0.8.4"
pbjson-build = "0.5.1"
